workdir/deploy/rbac.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ohe-system
  labels:
    app.kubernetes.io/name: ohe
