workdir/deploy/operator.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ruptura-operator
  namespace: ruptura-system
  labels:
    app.kubernetes.io/name: ruptura
    app.kubernetes.io/component: operator
    app.kubernetes.io/version: "0.8.9"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ruptura
      app.kubernetes.io/component: operator
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ruptura
        app.kubernetes.io/component: operator
        app.kubernetes.io/version: "0.8.9"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
        prometheus.io/path: "/metrics"
    spec:
      serviceAccountName: ruptura-operator
      securityContext:
        runAsNonRoot: true
      containers:
        - name: ruptura-operator
          image: ghcr.io/benfradjselim/ruptura-operator:v0.8.9
          imagePullPolicy: IfNotPresent
          args: ["--interval=30s", "--metrics-addr=:9090"]
          ports:
            - name: metrics
              containerPort: 9090
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9090
            initialDelaySeconds: 5
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /healthz
              port: 9090
            initialDelaySeconds: 3
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          resources:
            requests:
              cpu: "50m"
              memory: "32Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
